--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 		<meta name="handheldfriendly" content="true">
 		<meta name="mobilefriendlyt" content="240">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<header>
-			<div class="grid grid-middle silver pad-t-1-2">
+			<div class="grid grid-middle silver pad-t-1-2 sides">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
-					<h1 class="tera push-1-2">SpeakEasy</h1>
+					<div class="embed embed--4by1"><img class="embed__item" src="images/logo.png" alt="SpeakEasy logo"></div>
 				</div>
 				<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-3-4">
 					<nav>
-						<ol class="list-group push-1-2">
-							<li><a href="index.html">Homepage</a></li>
-							<li><a href="features.html">Features</a></li>
-							<li><a href="subscriptions.html">Subscriptions</a></li>
-							<li><a href="signup.html">Created an Account</a></li>
+						<ol class="list-group push-1-2 bold milli">
+							<li class="island-1-2"><a href="index.html">Homepage</a></li>
+							<li class="island-1-2"><a href="features.html">Features</a></li>
+							<li class="island-1-2"><a href="subscriptions.html">Subscriptions</a></li>
+							<li class="island-1-2 black"><a href="signup.html">Created an Account</a></li>
 						</ol>
 					</nav>
 				</div>
