finished banner on homepage

--- a/index.html
+++ b/index.html
@@ -24,21 +24,19 @@
 							<li class="island-1-2"><a href="index.html">Homepage</a></li>
 							<li class="island-1-2"><a href="features.html">Features</a></li>
 							<li class="island-1-2"><a href="subscriptions.html">Subscriptions</a></li>
-							<li class="island-1-2 black"><a href="signup.html">Created an Account</a></li>
+							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Created an Account</a></li>
 						</ol>
 					</nav>
 				</div>
 			</div>
 		</header>
-
-Homepage
-Features
-Subscriptions
-Created an Account
-
-LEARN QUICKLY
-AND EASILY.
-Subscription Plans
+		<main>
+			<div class="grid bus pad-t-2 pad-b-2">
+				<div class="unit unit-xs-1 unit-s-1-2 unit-m-2-3 unit-l-1-2 sides">
+					<h1 class="white push-1-2">LEARN QUICKLY  AND EASILY.</h1>
+					<a class="silver button" href="subscriptions.html">Subscription Plans</a>
+				</div>
+			</div>
 The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.
 WHO CAN USE SPEAKEASY?
 SpeakEasy is a language learning service designed for anyone looking to travel and submerge in the country’s culture through language. Whether you’re planning to teach English abroad and need to get a solid foundation in the language, or you’re travelling to your dream spot and would like to be able to move around with ease. SpeakEasy will help you get there.
