working on summary part

--- a/index.html
+++ b/index.html
@@ -37,10 +37,18 @@
 					<a class="silver button" href="subscriptions.html">Subscription Plans</a>
 				</div>
 			</div>
-The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.
-WHO CAN USE SPEAKEASY?
-SpeakEasy is a language learning service designed for anyone looking to travel and submerge in the country’s culture through language. Whether you’re planning to teach English abroad and need to get a solid foundation in the language, or you’re travelling to your dream spot and would like to be able to move around with ease. SpeakEasy will help you get there.
-Learn More
+			<div class="grid pad-t sides mw">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+					<p>The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.</p>
+				</div>
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+					<p class="bold push-0">WHO CAN USE SPEAKEASY?</p>
+					<p>SpeakEasy is a language learning service designed for anyone looking to travel and submerge in the country’s culture through language. Whether you’re planning to teach English abroad and need to get a solid foundation in the language, or you’re travelling to your dream spot and would like to be able to move around with ease. SpeakEasy will help you get there.</p>
+				</div>
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 center">
+					<p class="black button"><a class="white" src="features.html">Learn More</a></p>
+				</div>
+			</div>
 
 Create an Account
 or
