finished signup section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<header>
-			<div class="grid grid-middle silver pad-t-1-2 sides">
+		<header class="silver">
+			<div class="grid grid-middle pad-t-1-2 sides mw">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
 					<div class="embed embed--4by1"><img class="embed__item" src="images/logo.png" alt="SpeakEasy logo"></div>
 				</div>
@@ -32,30 +32,53 @@
 		</header>
 		<main>
 			<div class="grid bus pad-t-2 pad-b-2">
-				<div class="unit unit-xs-1 unit-s-1-2 unit-m-2-3 unit-l-2-3 sides">
-					<h1 class="white push-1-2">LEARN QUICKLY  AND EASILY.</h1>
-					<a class="silver button" href="subscriptions.html">Subscription Plans</a>
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw">
+					<div class="unit unit-xs-1 unit-s-1-2 unit-m-2-3 unit-l-2-3">
+						<h1 class="white push-1-2">LEARN QUICKLY  AND EASILY.</h1>
+						<a class="silver button" href="subscriptions.html">Subscription Plans</a>
+					</div>
 				</div>
 			</div>
-			<div class="grid pad-t sides mw">
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-					<p>The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.</p>
-				</div>
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-					<p class="bold push-0">WHO CAN USE SPEAKEASY?</p>
-					<p>SpeakEasy is a language learning service designed for anyone looking to travel and submerge in the country’s culture through language. Whether you’re planning to teach English abroad and need to get a solid foundation in the language, or you’re travelling to your dream spot and would like to be able to move around with ease. SpeakEasy will help you get there.</p>
-				</div>
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 center">
-					<p class="black button"><a class="white" src="features.html">Learn More</a></p>
+			<div class="grid pad-t grey">
+				<div class="sidesgutter mw">
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
+						<p>The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.</p>
+					</div>
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
+						<p class="bold push-0">WHO CAN USE SPEAKEASY?</p>
+						<p>SpeakEasy is a language learning service designed for anyone looking to travel and submerge in the country’s culture through language. Whether you’re planning to teach English abroad and need to get a solid foundation in the language, or you’re travelling to your dream spot and would like to be able to move around with ease. SpeakEasy will help you get there.</p>
+					</div>
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 unit-push-l-1-4 gutter-1-2">
+						<p class="black button"><a class="white" href="features.html">Learn More</a></p>
+					</div>
 				</div>
 			</div>
+			<div class="grid pad-t drkgrey center">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw">
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
+						<p class="black button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
+						<p class="text-center push-1-2">or</p>
+						<form>
+						<input type="text" name="email" value="Email" class="input push-1-2">
+						<input type="text" name="password" value="Password" class="input push-1-2">
+						</form>
+						<p class="black button"><a class="white" href="signup.html">Login</a></p>
+					</div>
+				</div>
+			</div>
+		</main>
+		<footer class="silver">
+			<div class="grid grid-middle pad-t-1-2 sides mw">
+					<nav>
+						<ol class="list-group push-1-2 milli bold">
+							<li class="island-1-2"><a href="#">About</a></li>
+							<li class="island-1-2"><a href="#">Jobs</a></li>
+							<li class="island-1-2"><a href="#">Press</a></li>
+							<li class="island-1-2"><a href="#">Help/FAQ</a></li>
+						</ol>
+					</nav>
 
-Create an Account
-or
-Email
-Password
-Login
-About	Jobs	Press	Help/FAQ
+
 
 
 © 2015 SpeakEasy		Imprint		Terms & Conditions  	Privacy Statement
