started working on footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header class="silver">
-			<div class="grid grid-middle pad-t-1-2 sides mw">
+			<div class="grid grid-middle pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
 					<div class="embed embed--4by1"><img class="embed__item" src="images/logo.png" alt="SpeakEasy logo"></div>
 				</div>
@@ -32,7 +32,7 @@
 		</header>
 		<main>
 			<div class="grid bus pad-t-2 pad-b-2">
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1-2 unit-m-2-3 unit-l-2-3">
 						<h1 class="white push-1-2">LEARN QUICKLY  AND EASILY.</h1>
 						<a class="silver button" href="subscriptions.html">Subscription Plans</a>
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 			<div class="grid pad-t grey">
-				<div class="sidesgutter mw">
+				<div class="sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
 						<p>The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.</p>
 					</div>
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 			<div class="grid pad-t drkgrey center">
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
 						<p class="black button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
 						<p class="text-center push-1-2">or</p>
@@ -68,7 +68,8 @@
 			</div>
 		</main>
 		<footer class="silver">
-			<div class="grid grid-middle pad-t-1-2 sides mw">
+			<div class="grid pad-t-1-2 sides mw unit-l-centered">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<nav>
 						<ol class="list-group push-1-2 milli bold">
 							<li class="island-1-2"><a href="#">About</a></li>
@@ -77,8 +78,29 @@
 							<li class="island-1-2"><a href="#">Help/FAQ</a></li>
 						</ol>
 					</nav>
-
-
+				</div>
+				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+						<div class="embed embed--1by1">
+							<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
+						</div>
+					</div>
+					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+						<div class="embed embed--1by1">
+							<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
+						</div>
+					</div>
+					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+						<div class="embed embed--1by1">
+							<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
+						</div>
+					</div>
+					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-3 unit-l-1-4 media__img">
+						<div class="embed embed--1by1">
+							<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
+						</div>
+					</div>
+				</div>
 
 
 © 2015 SpeakEasy		Imprint		Terms & Conditions  	Privacy Statement
