started working on signup

--- a/signup.html
+++ b/signup.html
@@ -34,29 +34,36 @@
 			</div>
 			<div class="grid pad-t pad-b grey">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
-					<h1 class="push-1-2">Features</h1>
+					<h1 class="push-1-2">Signup</h1>
 				</div>
-				<div class="sidesgutter mw unit-l-centered">
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
-						<p>• We offer different levels of learning for your needs. Whether you're looking to hold a casual conversation, use it with confidence in another country, interact on a professional level, or become completely fluent, we can get you to your goal.</p>
-						<p>• Once you're confident in your current level in your chosen language, take a test to see if you're ready to take the next step and expand your learning further.</p>
-						<p>• Make the use of our private tutoring system to connect with advanced individuals and certified language trainers to get you to the top faster.</p>
-					</div>
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
-						<p>• SpeakEasy offers learning programs for over 15 languages, including Spanish, French, German, and Italian.</p>
-						<p>• Dedicate your time to one language or try out your hand at learning several at a time.</p>
-						<p>• We have different teaching methods for your different learning styles. Use our quizzes, interactive games, crosswords and word searches, movies and shows with questions integrated in, and live chatting features to push yourself to excel. </p>
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
+						<form>
+							<input type="text" name="email" value="Email" class="input push-1-2">
+							<input type="text" name="password" value="Password" class="input push-1-2">
+						</form>
+						<p class="text-center push-1-2">Credit Card</p>
+						<form>
+							<input type="text" name="cardname" value="Name on Card" class="input push-1-2">
+							<input type="text" name="cardnumber" value="Card Number" class="input push-1-2">
+						</form>
+						<p class="text-center push-1-2">Expiration Date</p>
+						<form>
+							<input type="text" name="month" value="01" class="input push-1-2">
+							<input type="text" name="year" value="2015" class="input push-1-2">
+						</form>
+						<br>
+						<p class="black button"><a class="white" href="index.html">Join</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="grid pad-t drkgrey center">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
-						<p class="black button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
-						<p class="text-center push-1-2">or</p>
+						<p class="text-center push-1-2">Already a member?</p>
 						<form>
-							<input type="text" name="email" value="Email" class="input push-1-2">
-							<input type="text" name="password" value="Password" class="input push-1-2">
+						<input type="text" name="email" value="Email" class="input push-1-2">
+						<input type="text" name="password" value="Password" class="input push-1-2">
 						</form>
 						<p class="black button"><a class="white" href="index.html">Login</a></p>
 					</div>
