--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<header class="silver">
 			<div class="grid grid-middle pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
-					<div class="embed embed--4by1"><img class="embed__item" src="images/logo.png" alt="SpeakEasy logo"></div>
+					<div class="embed embed--4by1"><a href="index.html"><img class="embed__item" src="images/logo.png" alt="SpeakEasy logo"></a></div>
 				</div>
 				<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-3-4">
 					<nav>
@@ -59,10 +59,10 @@
 						<p class="black button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
 						<p class="text-center push-1-2">or</p>
 						<form>
-						<input type="text" name="email" value="Email" class="input push-1-2">
-						<input type="text" name="password" value="Password" class="input push-1-2">
+							<input type="text" name="email" value="Email" class="input push-1-2">
+							<input type="text" name="password" value="Password" class="input push-1-2">
 						</form>
-						<p class="black button"><a class="white" href="signup.html">Login</a></p>
+						<p class="black button"><a class="white" href="index.html">Login</a></p>
 					</div>
 				</div>
 			</div>
