finished styling subscriptions

--- a/subscriptions.html
+++ b/subscriptions.html
@@ -36,35 +36,35 @@
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
 					<h1 class="push-1-2">Subscriptions</h1>
 				</div>
-				<div class="sidesgutter mw unit-l-centered">
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 gutter-1-2 one">
+				<div class="sidessub mw unit-l-centered">
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 guttersub pad-t pad-b one">
 						<p class="bold push-0">2-MONTH FREE TRIAL</p>
 						<p class="push-0">• Learn only one language at a time.</p>
 						<p class="push-0">• Access Level 1 & 2 of your chosen language.</p>
 						<p>• Use over half of our interactive game collection, crosswords and word searches, and quizzes</p>
-						<p class="black button"><a class="white" href="signup.html">Select Plan</a></p>
+						<p class="black button push-0"><a class="white" href="signup.html">Select Plan</a></p>
 					</div>
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 gutter-1-2 two">
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 guttersub pad-t pad-b two">
 						<p class="bold push-0">BASE LEVEL - $9.99/MONTH</p>
 						<p class="push-0">• Learn only one language at a time.</p>
 						<p class="push-0">• Access Level 1 - 3 of your chosen language.</p>
 						<p>• Use our entire interactive game collection, crosswords and word searches, and quizzes</p>
-						<p class="black button"><a class="white" href="signup.html">Select Plan</a></p>
+						<p class="black button push-0"><a class="white" href="signup.html">Select Plan</a></p>
 					</div>
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 gutter-1-2 three">
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 guttersub pad-t pad-b three">
 						<p class="bold push-0">ADVANCED LEVEL - $14.99/MONTH</p>
 						<p class="push-0">• Learn 2 languages at once.</p>
 						<p class="push-0">• Access Level 1 - 4 of your chosen language.</p>
 						<p>• Use our entire interactive game collection, crosswords and word searches, quizzes, and live chat feature.</p>
-						<p class="black button"><a class="white" href="signup.html">Select Plan</a></p>
+						<p class="black button push-0"><a class="white" href="signup.html">Select Plan</a></p>
 					</div>
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 gutter-1-2 four">
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 guttersub pad-t pad-b four">
 						<p class="bold push-0">FLUENT LEVEL - $149.99/YEAR</p>
 						<p class="push-0">• Learn up to 4 languages at a time.</p>
 						<p class="push-0">• Access Level 1 - 6 of your chosen language.</p>
 						<p class="push-0">• Use our entire interactive game collection, crosswords and word searches, quizzes, live chat feature, and movie and show library.</p>
 						<p>• Private tutoring system</p>
-						<p class="black button"><a class="white" href="signup.html">Select Plan</a></p>
+						<p class="black button push-0"><a class="white" href="signup.html">Select Plan</a></p>
 					</div>
 				</div>
 			</div>
