fixed sign up sheet and updated footer

--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>SpeakEasy · Home</title>
+		<title>SpeakEasy · Signup</title>
 		<link href="css/grid.css" rel="stylesheet">
 		<link href="css/typography.css" rel="stylesheet">
 		<link href="css/modules.css" rel="stylesheet">
@@ -48,10 +48,33 @@
 							<input type="text" name="cardnumber" value="Card Number" class="input push-1-2">
 						</form>
 						<p class="text-center push-1-2">Expiration Date</p>
-						<form>
-							<input type="text" name="month" value="01" class="input push-1-2">
-							<input type="text" name="year" value="2015" class="input push-1-2">
-						</form>
+						<select class="input select push-1-2">
+							<option>01</option>
+							<option>02</option>
+							<option>03</option>
+							<option>04</option>
+							<option>05</option>
+							<option>06</option>
+							<option>07</option>
+							<option>08</option>
+							<option>09</option>
+							<option>10</option>
+							<option>11</option>
+							<option>12</option>
+						</select>
+						<select class="input select push-1-2">
+							<option>2015</option>
+							<option>2016</option>
+							<option>2017</option>
+							<option>2018</option>
+							<option>2019</option>
+							<option>2020</option>
+							<option>2021</option>
+							<option>2022</option>
+							<option>2023</option>
+							<option>2024</option>
+							<option>2025</option>
+						</select>
 						<br>
 						<p class="black button"><a class="white" href="index.html">Join</a></p>
 					</div>
@@ -70,7 +93,7 @@
 				</div>
 			</div>
 		</main>
-		<footer class="silver">
+		<footer class="silver pad-t">
 			<div class="grid pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<nav>
@@ -83,33 +106,40 @@
 					</nav>
 				</div>
 				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
-						<div class="embed embed--1by1">
-							<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
+						<div class="unit unit-xs-1 unit-s-1-3 unit-m-1-2 unit-l-1-2 media__img--reversed">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+							<div class="embed embed--1by1">
+								<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
+							</div>
 						</div>
-					</div>
-					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
-						<div class="embed embed--1by1">
-							<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+							<div class="embed embed--1by1">
+								<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
+							</div>
 						</div>
-					</div>
-					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
-						<div class="embed embed--1by1">
-							<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+							<div class="embed embed--1by1">
+								<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
+							</div>
 						</div>
-					</div>
-					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-3 unit-l-1-4 media__img">
-						<div class="embed embed--1by1">
-							<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-3 unit-l-1-4 media__img">
+							<div class="embed embed--1by1">
+								<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
+							</div>
 						</div>
 					</div>
 				</div>
-
-
-© 2015 SpeakEasy		Imprint		Terms & Conditions  	Privacy Statement
-
-
-
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+					<nav>
+						<ol class="list-group push-1-2 micro">
+							<li class="island-1-2">© 2015 SpeakEasy</li>
+							<li class="island-1-2"><a href="#">Imprint</a></li>
+							<li class="island-1-2"><a href="#">Terms & Conditions</a></li>
+							<li class="island-1-2"><a href="#">Privacy Statement</a></li>
+						</ol>
+					</nav>
+				</div>
+			</div>
 		</header>
 		<main>
 		</main>
