--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				</div>
 			</div>
 		</main>
-		<footer class="silver">
+		<footer class="silver pad-t">
 			<div class="grid pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<nav>
@@ -80,33 +80,40 @@
 					</nav>
 				</div>
 				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
-						<div class="embed embed--1by1">
-							<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
+						<div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2 media__img--reversed">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+							<div class="embed embed--1by1">
+								<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
+							</div>
 						</div>
-					</div>
-					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
-						<div class="embed embed--1by1">
-							<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+							<div class="embed embed--1by1">
+								<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
+							</div>
 						</div>
-					</div>
-					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
-						<div class="embed embed--1by1">
-							<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+							<div class="embed embed--1by1">
+								<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
+							</div>
 						</div>
-					</div>
-					<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-3 unit-l-1-4 media__img">
-						<div class="embed embed--1by1">
-							<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-3 unit-l-1-4 media__img">
+							<div class="embed embed--1by1">
+								<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
+							</div>
 						</div>
 					</div>
 				</div>
-
-
-© 2015 SpeakEasy		Imprint		Terms & Conditions  	Privacy Statement
-
-
-
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+					<nav>
+						<ol class="list-group push-1-2 micro">
+							<li class="island-1-2">© 2015 SpeakEasy</li>
+							<li class="island-1-2"><a href="#">Imprint</a></li>
+							<li class="island-1-2"><a href="#">Terms & Conditions</a></li>
+							<li class="island-1-2"><a href="#">Privacy Statement</a></li>
+						</ol>
+					</nav>
+				</div>
+			</div>
 		</header>
 		<main>
 		</main>
