fixed padding and added a favicon

--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,7 @@
 		<meta name="handheldfriendly" content="true">
 		<meta name="mobilefriendlyt" content="240">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="images/favicon.ico"/>
 		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
@@ -32,7 +33,7 @@
 		</header>
 		<main>
 			</div>
-			<div class="grid pad-t pad-b grey">
+			<div class="grid pad-t-2 pad-b-2 grey">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
 					<h1 class="push-1-2">Signup</h1>
 				</div>
@@ -80,7 +81,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="grid pad-t drkgrey center">
+			<div class="grid pad-t-2 pad-b drkgrey center">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
 						<p class="text-center push-1-2">Already a member?</p>
@@ -129,7 +130,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
 					<nav>
 						<ol class="list-group push-1-2 micro">
 							<li class="island-1-2">© 2015 SpeakEasy</li>
