--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta name="handheldfriendly" content="true">
 		<meta name="mobilefriendlyt" content="240">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="images/favicon.ico"/>
 		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
@@ -39,7 +40,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="grid pad-t grey">
+			<div class="grid pad-t-2 pad-b grey">
 				<div class="sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
 						<p>The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.</p>
@@ -53,7 +54,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="grid pad-t drkgrey center">
+			<div class="grid pad-t-2 pad-b drkgrey center">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
 						<p class="black button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
@@ -81,29 +82,29 @@
 				</div>
 				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
 						<div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2 media__img--reversed">
-						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img island-1-2">
 							<div class="embed embed--1by1">
 								<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
 							</div>
 						</div>
-						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img island-1-2">
 							<div class="embed embed--1by1">
 								<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
 							</div>
 						</div>
-						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img island-1-2">
 							<div class="embed embed--1by1">
 								<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
 							</div>
 						</div>
-						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-3 unit-l-1-4 media__img">
+						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-3 unit-l-1-4 media__img island-1-2">
 							<div class="embed embed--1by1">
 								<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
 					<nav>
 						<ol class="list-group push-1-2 micro">
 							<li class="island-1-2">© 2015 SpeakEasy</li>
