--- a/index.html
+++ b/index.html
@@ -81,44 +81,30 @@
 					</nav>
 				</div>
 				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-						<div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-2 unit-l-1-2 media__img--reversed">
-						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img island-1-2">
-							<div class="embed embed--1by1">
-								<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
-							</div>
-						</div>
-						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img island-1-2">
-							<div class="embed embed--1by1">
-								<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
-							</div>
-						</div>
-						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-4 unit-l-1-4 media__img island-1-2">
-							<div class="embed embed--1by1">
-								<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
-							</div>
-						</div>
-						<div class="unit unit-xs-1-3 unit-s-1-2 unit-m-1-3 unit-l-1-4 media__img island-1-2">
-							<div class="embed embed--1by1">
-								<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
-							</div>
-						</div>
+					<div class="embed embed--1by1 social media__img--reversed ">
+						<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
+					</div>
+					<div class="embed embed--1by1 social media__img--reversed ">
+						<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
+					</div>
+					<div class="embed embed--1by1 social media__img--reversed ">
+						<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
+					</div>
+					<div class="embed embed--1by1 social media__img--reversed ">
+						<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
 					</div>
 				</div>
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
-					<nav>
-						<ol class="list-group push-1-2 micro">
-							<li class="island-1-2">© 2015 SpeakEasy</li>
-							<li class="island-1-2"><a href="#">Imprint</a></li>
-							<li class="island-1-2"><a href="#">Terms & Conditions</a></li>
-							<li class="island-1-2"><a href="#">Privacy Statement</a></li>
-						</ol>
-					</nav>
-				</div>
 			</div>
-		</header>
-		<main>
-		</main>
-		<footer>
+			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+				<nav>
+					<ol class="list-group push-1-2 micro">
+						<li class="island-1-2">© 2015 SpeakEasy</li>
+						<li class="island-1-2"><a href="#">Imprint</a></li>
+						<li class="island-1-2"><a href="#">Terms & Conditions</a></li>
+						<li class="island-1-2"><a href="#">Privacy Statement</a></li>
+					</ol>
+				</nav>
+			</div>
 		</footer>
 	</body>
 </html>
