--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						</ol>
 					</nav>
 				</div>
-				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<div class="embed embed--1by1 social media__img--reversed ">
 						<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
 					</div>
